--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/svg+xml" href="./shop.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>shopEkart</title>
-    
+    <script data-main="js/page1" src="https://requirejs.org/docs/release/2.3.6/minified/require.js"></script>
   </head>
   <body>
     <div id="root"></div>
